parser.output
Terminals unused in grammar

   INTPTR
   WHILE
   AND
   OR
   PVALUE
   ADDRESS


Grammar

    0 $accept: S $end

    1 S: PROCEDURE ProcedureStarts MainProcedures Procedures
    2  | NUMBER '+' NUMBER

    3 ProcedureStarts: ID '(' Parameter ')' RETURN Type '{' Exprs ReturnExprs '}' PROCEDURE ProcedureStarts
    4                | %empty

    5 Procedures: PROCEDURE ID '(' Parameter ')' RETURN Type '{' Exprs ReturnExprs '}'
    6           | %empty

    7 MainProcedures: MAIN '(' ')' RETURN Type '{' Exprs ReturnExprs '}'

    8 Exprs: VAR ID IDPrime ':' Type ';' Exprs
    9      | LHS '=' RHS ';' Exprs
   10      | Ifelse Exprs
   11      | %empty

   12 AOP: '+'
   13    | '-'
   14    | '*'
   15    | '/'

   16 COP: EQ
   17    | GE
   18    | LE
   19    | NEQ
   20    | '>'
   21    | '<'

   22 LHS: ID

   23 Arguments: ID IDPrime
   24          | %empty

   25 RHS: Term AOP Term
   26    | Term
   27    | ID '(' Arguments ')'
   28    | NULLX

   29 Term: ID
   30     | NUMBER

   31 ReturnExprs: RETURN Term

   32 Parameter: ID IDPrime ':' Type ParameterPrime
   33          | %empty

   34 ParameterPrime: ';' ID IDPrime ':' Type ParameterPrime
   35               | %empty

   36 IDPrime: ',' ID IDPrime
   37        | %empty

   38 Type: BOOLEAN
   39     | INTEGER
   40     | CHAR
   41     | CHARPTR
   42     | STRING

   43 Ifelse: IF '(' BoolStmt ')' '{' Exprs '}' ElseStmt

   44 BoolStmt: Term COP Term

   45 ElseStmt: ELSE '{' Exprs '}'
   46         | %empty


Terminals, with rules where they appear

$end (0) 0
'(' (40) 3 5 7 27 43
')' (41) 3 5 7 27 43
'*' (42) 14
'+' (43) 2 12
',' (44) 36
'-' (45) 13
'/' (47) 15
':' (58) 8 32 34
';' (59) 8 9 34
'<' (60) 21
'=' (61) 9
'>' (62) 20
'{' (123) 3 5 7 43 45
'}' (125) 3 5 7 43 45
error (256)
MAIN (258) 7
BOOLEAN (259) 38
CHAR (260) 40
INTEGER (261) 39
STRING (262) 42
INTPTR (263)
CHARPTR (264) 41
IF (265) 43
ELSE (266) 45
WHILE (267)
VAR (268) 8
PROCEDURE (269) 1 3 5
RETURN (270) 3 5 7 31
ID (271) 3 5 8 22 23 27 29 32 34 36
NULLX (272) 28
NUMBER (273) 2 30
EQ (274) 16
GE (275) 17
LE (276) 18
NEQ (277) 19
AND (278)
OR (279)
PVALUE (280)
ADDRESS (281)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
S (42)
    on left: 1 2, on right: 0
ProcedureStarts (43)
    on left: 3 4, on right: 1 3
Procedures (44)
    on left: 5 6, on right: 1
MainProcedures (45)
    on left: 7, on right: 1
Exprs (46)
    on left: 8 9 10 11, on right: 3 5 7 8 9 10 43 45
AOP (47)
    on left: 12 13 14 15, on right: 25
COP (48)
    on left: 16 17 18 19 20 21, on right: 44
LHS (49)
    on left: 22, on right: 9
Arguments (50)
    on left: 23 24, on right: 27
RHS (51)
    on left: 25 26 27 28, on right: 9
Term (52)
    on left: 29 30, on right: 25 26 31 44
ReturnExprs (53)
    on left: 31, on right: 3 5 7
Parameter (54)
    on left: 32 33, on right: 3 5
ParameterPrime (55)
    on left: 34 35, on right: 32 34
IDPrime (56)
    on left: 36 37, on right: 8 23 32 34 36
Type (57)
    on left: 38 39 40 41 42, on right: 3 5 7 8 32 34
Ifelse (58)
    on left: 43, on right: 10
BoolStmt (59)
    on left: 44, on right: 43
ElseStmt (60)
    on left: 45 46, on right: 43


State 0

    0 $accept: . S $end

    PROCEDURE  shift, and go to state 1
    NUMBER     shift, and go to state 2

    S  go to state 3


State 1

    1 S: PROCEDURE . ProcedureStarts MainProcedures Procedures

    ID  shift, and go to state 4

    $default  reduce using rule 4 (ProcedureStarts)

    ProcedureStarts  go to state 5


State 2

    2 S: NUMBER . '+' NUMBER

    '+'  shift, and go to state 6


State 3

    0 $accept: S . $end

    $end  shift, and go to state 7


State 4

    3 ProcedureStarts: ID . '(' Parameter ')' RETURN Type '{' Exprs ReturnExprs '}' PROCEDURE ProcedureStarts

    '('  shift, and go to state 8


State 5

    1 S: PROCEDURE ProcedureStarts . MainProcedures Procedures

    MAIN  shift, and go to state 9

    MainProcedures  go to state 10


State 6

    2 S: NUMBER '+' . NUMBER

    NUMBER  shift, and go to state 11


State 7

    0 $accept: S $end .

    $default  accept


State 8

    3 ProcedureStarts: ID '(' . Parameter ')' RETURN Type '{' Exprs ReturnExprs '}' PROCEDURE ProcedureStarts

    ID  shift, and go to state 12

    $default  reduce using rule 33 (Parameter)

    Parameter  go to state 13


State 9

    7 MainProcedures: MAIN . '(' ')' RETURN Type '{' Exprs ReturnExprs '}'

    '('  shift, and go to state 14


State 10

    1 S: PROCEDURE ProcedureStarts MainProcedures . Procedures

    PROCEDURE  shift, and go to state 15

    $default  reduce using rule 6 (Procedures)

    Procedures  go to state 16


State 11

    2 S: NUMBER '+' NUMBER .

    $default  reduce using rule 2 (S)


State 12

   32 Parameter: ID . IDPrime ':' Type ParameterPrime

    ','  shift, and go to state 17

    $default  reduce using rule 37 (IDPrime)

    IDPrime  go to state 18


State 13

    3 ProcedureStarts: ID '(' Parameter . ')' RETURN Type '{' Exprs ReturnExprs '}' PROCEDURE ProcedureStarts

    ')'  shift, and go to state 19


State 14

    7 MainProcedures: MAIN '(' . ')' RETURN Type '{' Exprs ReturnExprs '}'

    ')'  shift, and go to state 20


State 15

    5 Procedures: PROCEDURE . ID '(' Parameter ')' RETURN Type '{' Exprs ReturnExprs '}'

    ID  shift, and go to state 21


State 16

    1 S: PROCEDURE ProcedureStarts MainProcedures Procedures .

    $default  reduce using rule 1 (S)


State 17

   36 IDPrime: ',' . ID IDPrime

    ID  shift, and go to state 22


State 18

   32 Parameter: ID IDPrime . ':' Type ParameterPrime

    ':'  shift, and go to state 23


State 19

    3 ProcedureStarts: ID '(' Parameter ')' . RETURN Type '{' Exprs ReturnExprs '}' PROCEDURE ProcedureStarts

    RETURN  shift, and go to state 24


State 20

    7 MainProcedures: MAIN '(' ')' . RETURN Type '{' Exprs ReturnExprs '}'

    RETURN  shift, and go to state 25


State 21

    5 Procedures: PROCEDURE ID . '(' Parameter ')' RETURN Type '{' Exprs ReturnExprs '}'

    '('  shift, and go to state 26


State 22

   36 IDPrime: ',' ID . IDPrime

    ','  shift, and go to state 17

    $default  reduce using rule 37 (IDPrime)

    IDPrime  go to state 27


State 23

   32 Parameter: ID IDPrime ':' . Type ParameterPrime

    BOOLEAN  shift, and go to state 28
    CHAR     shift, and go to state 29
    INTEGER  shift, and go to state 30
    STRING   shift, and go to state 31
    CHARPTR  shift, and go to state 32

    Type  go to state 33


State 24

    3 ProcedureStarts: ID '(' Parameter ')' RETURN . Type '{' Exprs ReturnExprs '}' PROCEDURE ProcedureStarts

    BOOLEAN  shift, and go to state 28
    CHAR     shift, and go to state 29
    INTEGER  shift, and go to state 30
    STRING   shift, and go to state 31
    CHARPTR  shift, and go to state 32

    Type  go to state 34


State 25

    7 MainProcedures: MAIN '(' ')' RETURN . Type '{' Exprs ReturnExprs '}'

    BOOLEAN  shift, and go to state 28
    CHAR     shift, and go to state 29
    INTEGER  shift, and go to state 30
    STRING   shift, and go to state 31
    CHARPTR  shift, and go to state 32

    Type  go to state 35


State 26

    5 Procedures: PROCEDURE ID '(' . Parameter ')' RETURN Type '{' Exprs ReturnExprs '}'

    ID  shift, and go to state 12

    $default  reduce using rule 33 (Parameter)

    Parameter  go to state 36


State 27

   36 IDPrime: ',' ID IDPrime .

    $default  reduce using rule 36 (IDPrime)


State 28

   38 Type: BOOLEAN .

    $default  reduce using rule 38 (Type)


State 29

   40 Type: CHAR .

    $default  reduce using rule 40 (Type)


State 30

   39 Type: INTEGER .

    $default  reduce using rule 39 (Type)


State 31

   42 Type: STRING .

    $default  reduce using rule 42 (Type)


State 32

   41 Type: CHARPTR .

    $default  reduce using rule 41 (Type)


State 33

   32 Parameter: ID IDPrime ':' Type . ParameterPrime

    ';'  shift, and go to state 37

    $default  reduce using rule 35 (ParameterPrime)

    ParameterPrime  go to state 38


State 34

    3 ProcedureStarts: ID '(' Parameter ')' RETURN Type . '{' Exprs ReturnExprs '}' PROCEDURE ProcedureStarts

    '{'  shift, and go to state 39


State 35

    7 MainProcedures: MAIN '(' ')' RETURN Type . '{' Exprs ReturnExprs '}'

    '{'  shift, and go to state 40


State 36

    5 Procedures: PROCEDURE ID '(' Parameter . ')' RETURN Type '{' Exprs ReturnExprs '}'

    ')'  shift, and go to state 41


State 37

   34 ParameterPrime: ';' . ID IDPrime ':' Type ParameterPrime

    ID  shift, and go to state 42


State 38

   32 Parameter: ID IDPrime ':' Type ParameterPrime .

    $default  reduce using rule 32 (Parameter)


State 39

    3 ProcedureStarts: ID '(' Parameter ')' RETURN Type '{' . Exprs ReturnExprs '}' PROCEDURE ProcedureStarts

    IF   shift, and go to state 43
    VAR  shift, and go to state 44
    ID   shift, and go to state 45

    $default  reduce using rule 11 (Exprs)

    Exprs   go to state 46
    LHS     go to state 47
    Ifelse  go to state 48


State 40

    7 MainProcedures: MAIN '(' ')' RETURN Type '{' . Exprs ReturnExprs '}'

    IF   shift, and go to state 43
    VAR  shift, and go to state 44
    ID   shift, and go to state 45

    $default  reduce using rule 11 (Exprs)

    Exprs   go to state 49
    LHS     go to state 47
    Ifelse  go to state 48


State 41

    5 Procedures: PROCEDURE ID '(' Parameter ')' . RETURN Type '{' Exprs ReturnExprs '}'

    RETURN  shift, and go to state 50


State 42

   34 ParameterPrime: ';' ID . IDPrime ':' Type ParameterPrime

    ','  shift, and go to state 17

    $default  reduce using rule 37 (IDPrime)

    IDPrime  go to state 51


State 43

   43 Ifelse: IF . '(' BoolStmt ')' '{' Exprs '}' ElseStmt

    '('  shift, and go to state 52


State 44

    8 Exprs: VAR . ID IDPrime ':' Type ';' Exprs

    ID  shift, and go to state 53


State 45

   22 LHS: ID .

    $default  reduce using rule 22 (LHS)


State 46

    3 ProcedureStarts: ID '(' Parameter ')' RETURN Type '{' Exprs . ReturnExprs '}' PROCEDURE ProcedureStarts

    RETURN  shift, and go to state 54

    ReturnExprs  go to state 55


State 47

    9 Exprs: LHS . '=' RHS ';' Exprs

    '='  shift, and go to state 56


State 48

   10 Exprs: Ifelse . Exprs

    IF   shift, and go to state 43
    VAR  shift, and go to state 44
    ID   shift, and go to state 45

    $default  reduce using rule 11 (Exprs)

    Exprs   go to state 57
    LHS     go to state 47
    Ifelse  go to state 48


State 49

    7 MainProcedures: MAIN '(' ')' RETURN Type '{' Exprs . ReturnExprs '}'

    RETURN  shift, and go to state 54

    ReturnExprs  go to state 58


State 50

    5 Procedures: PROCEDURE ID '(' Parameter ')' RETURN . Type '{' Exprs ReturnExprs '}'

    BOOLEAN  shift, and go to state 28
    CHAR     shift, and go to state 29
    INTEGER  shift, and go to state 30
    STRING   shift, and go to state 31
    CHARPTR  shift, and go to state 32

    Type  go to state 59


State 51

   34 ParameterPrime: ';' ID IDPrime . ':' Type ParameterPrime

    ':'  shift, and go to state 60


State 52

   43 Ifelse: IF '(' . BoolStmt ')' '{' Exprs '}' ElseStmt

    ID      shift, and go to state 61
    NUMBER  shift, and go to state 62

    Term      go to state 63
    BoolStmt  go to state 64


State 53

    8 Exprs: VAR ID . IDPrime ':' Type ';' Exprs

    ','  shift, and go to state 17

    $default  reduce using rule 37 (IDPrime)

    IDPrime  go to state 65


State 54

   31 ReturnExprs: RETURN . Term

    ID      shift, and go to state 61
    NUMBER  shift, and go to state 62

    Term  go to state 66


State 55

    3 ProcedureStarts: ID '(' Parameter ')' RETURN Type '{' Exprs ReturnExprs . '}' PROCEDURE ProcedureStarts

    '}'  shift, and go to state 67


State 56

    9 Exprs: LHS '=' . RHS ';' Exprs

    ID      shift, and go to state 68
    NULLX   shift, and go to state 69
    NUMBER  shift, and go to state 62

    RHS   go to state 70
    Term  go to state 71


State 57

   10 Exprs: Ifelse Exprs .

    $default  reduce using rule 10 (Exprs)


State 58

    7 MainProcedures: MAIN '(' ')' RETURN Type '{' Exprs ReturnExprs . '}'

    '}'  shift, and go to state 72


State 59

    5 Procedures: PROCEDURE ID '(' Parameter ')' RETURN Type . '{' Exprs ReturnExprs '}'

    '{'  shift, and go to state 73


State 60

   34 ParameterPrime: ';' ID IDPrime ':' . Type ParameterPrime

    BOOLEAN  shift, and go to state 28
    CHAR     shift, and go to state 29
    INTEGER  shift, and go to state 30
    STRING   shift, and go to state 31
    CHARPTR  shift, and go to state 32

    Type  go to state 74


State 61

   29 Term: ID .

    $default  reduce using rule 29 (Term)


State 62

   30 Term: NUMBER .

    $default  reduce using rule 30 (Term)


State 63

   44 BoolStmt: Term . COP Term

    EQ   shift, and go to state 75
    GE   shift, and go to state 76
    LE   shift, and go to state 77
    NEQ  shift, and go to state 78
    '>'  shift, and go to state 79
    '<'  shift, and go to state 80

    COP  go to state 81


State 64

   43 Ifelse: IF '(' BoolStmt . ')' '{' Exprs '}' ElseStmt

    ')'  shift, and go to state 82


State 65

    8 Exprs: VAR ID IDPrime . ':' Type ';' Exprs

    ':'  shift, and go to state 83


State 66

   31 ReturnExprs: RETURN Term .

    $default  reduce using rule 31 (ReturnExprs)


State 67

    3 ProcedureStarts: ID '(' Parameter ')' RETURN Type '{' Exprs ReturnExprs '}' . PROCEDURE ProcedureStarts

    PROCEDURE  shift, and go to state 84


State 68

   27 RHS: ID . '(' Arguments ')'
   29 Term: ID .

    '('  shift, and go to state 85

    $default  reduce using rule 29 (Term)


State 69

   28 RHS: NULLX .

    $default  reduce using rule 28 (RHS)


State 70

    9 Exprs: LHS '=' RHS . ';' Exprs

    ';'  shift, and go to state 86


State 71

   25 RHS: Term . AOP Term
   26    | Term .

    '+'  shift, and go to state 87
    '-'  shift, and go to state 88
    '*'  shift, and go to state 89
    '/'  shift, and go to state 90

    $default  reduce using rule 26 (RHS)

    AOP  go to state 91


State 72

    7 MainProcedures: MAIN '(' ')' RETURN Type '{' Exprs ReturnExprs '}' .

    $default  reduce using rule 7 (MainProcedures)


State 73

    5 Procedures: PROCEDURE ID '(' Parameter ')' RETURN Type '{' . Exprs ReturnExprs '}'

    IF   shift, and go to state 43
    VAR  shift, and go to state 44
    ID   shift, and go to state 45

    $default  reduce using rule 11 (Exprs)

    Exprs   go to state 92
    LHS     go to state 47
    Ifelse  go to state 48


State 74

   34 ParameterPrime: ';' ID IDPrime ':' Type . ParameterPrime

    ';'  shift, and go to state 37

    $default  reduce using rule 35 (ParameterPrime)

    ParameterPrime  go to state 93


State 75

   16 COP: EQ .

    $default  reduce using rule 16 (COP)


State 76

   17 COP: GE .

    $default  reduce using rule 17 (COP)


State 77

   18 COP: LE .

    $default  reduce using rule 18 (COP)


State 78

   19 COP: NEQ .

    $default  reduce using rule 19 (COP)


State 79

   20 COP: '>' .

    $default  reduce using rule 20 (COP)


State 80

   21 COP: '<' .

    $default  reduce using rule 21 (COP)


State 81

   44 BoolStmt: Term COP . Term

    ID      shift, and go to state 61
    NUMBER  shift, and go to state 62

    Term  go to state 94


State 82

   43 Ifelse: IF '(' BoolStmt ')' . '{' Exprs '}' ElseStmt

    '{'  shift, and go to state 95


State 83

    8 Exprs: VAR ID IDPrime ':' . Type ';' Exprs

    BOOLEAN  shift, and go to state 28
    CHAR     shift, and go to state 29
    INTEGER  shift, and go to state 30
    STRING   shift, and go to state 31
    CHARPTR  shift, and go to state 32

    Type  go to state 96


State 84

    3 ProcedureStarts: ID '(' Parameter ')' RETURN Type '{' Exprs ReturnExprs '}' PROCEDURE . ProcedureStarts

    ID  shift, and go to state 4

    $default  reduce using rule 4 (ProcedureStarts)

    ProcedureStarts  go to state 97


State 85

   27 RHS: ID '(' . Arguments ')'

    ID  shift, and go to state 98

    $default  reduce using rule 24 (Arguments)

    Arguments  go to state 99


State 86

    9 Exprs: LHS '=' RHS ';' . Exprs

    IF   shift, and go to state 43
    VAR  shift, and go to state 44
    ID   shift, and go to state 45

    $default  reduce using rule 11 (Exprs)

    Exprs   go to state 100
    LHS     go to state 47
    Ifelse  go to state 48


State 87

   12 AOP: '+' .

    $default  reduce using rule 12 (AOP)


State 88

   13 AOP: '-' .

    $default  reduce using rule 13 (AOP)


State 89

   14 AOP: '*' .

    $default  reduce using rule 14 (AOP)


State 90

   15 AOP: '/' .

    $default  reduce using rule 15 (AOP)


State 91

   25 RHS: Term AOP . Term

    ID      shift, and go to state 61
    NUMBER  shift, and go to state 62

    Term  go to state 101


State 92

    5 Procedures: PROCEDURE ID '(' Parameter ')' RETURN Type '{' Exprs . ReturnExprs '}'

    RETURN  shift, and go to state 54

    ReturnExprs  go to state 102


State 93

   34 ParameterPrime: ';' ID IDPrime ':' Type ParameterPrime .

    $default  reduce using rule 34 (ParameterPrime)


State 94

   44 BoolStmt: Term COP Term .

    $default  reduce using rule 44 (BoolStmt)


State 95

   43 Ifelse: IF '(' BoolStmt ')' '{' . Exprs '}' ElseStmt

    IF   shift, and go to state 43
    VAR  shift, and go to state 44
    ID   shift, and go to state 45

    $default  reduce using rule 11 (Exprs)

    Exprs   go to state 103
    LHS     go to state 47
    Ifelse  go to state 48


State 96

    8 Exprs: VAR ID IDPrime ':' Type . ';' Exprs

    ';'  shift, and go to state 104


State 97

    3 ProcedureStarts: ID '(' Parameter ')' RETURN Type '{' Exprs ReturnExprs '}' PROCEDURE ProcedureStarts .

    $default  reduce using rule 3 (ProcedureStarts)


State 98

   23 Arguments: ID . IDPrime

    ','  shift, and go to state 17

    $default  reduce using rule 37 (IDPrime)

    IDPrime  go to state 105


State 99

   27 RHS: ID '(' Arguments . ')'

    ')'  shift, and go to state 106


State 100

    9 Exprs: LHS '=' RHS ';' Exprs .

    $default  reduce using rule 9 (Exprs)


State 101

   25 RHS: Term AOP Term .

    $default  reduce using rule 25 (RHS)


State 102

    5 Procedures: PROCEDURE ID '(' Parameter ')' RETURN Type '{' Exprs ReturnExprs . '}'

    '}'  shift, and go to state 107


State 103

   43 Ifelse: IF '(' BoolStmt ')' '{' Exprs . '}' ElseStmt

    '}'  shift, and go to state 108


State 104

    8 Exprs: VAR ID IDPrime ':' Type ';' . Exprs

    IF   shift, and go to state 43
    VAR  shift, and go to state 44
    ID   shift, and go to state 45

    $default  reduce using rule 11 (Exprs)

    Exprs   go to state 109
    LHS     go to state 47
    Ifelse  go to state 48


State 105

   23 Arguments: ID IDPrime .

    $default  reduce using rule 23 (Arguments)


State 106

   27 RHS: ID '(' Arguments ')' .

    $default  reduce using rule 27 (RHS)


State 107

    5 Procedures: PROCEDURE ID '(' Parameter ')' RETURN Type '{' Exprs ReturnExprs '}' .

    $default  reduce using rule 5 (Procedures)


State 108

   43 Ifelse: IF '(' BoolStmt ')' '{' Exprs '}' . ElseStmt

    ELSE  shift, and go to state 110

    $default  reduce using rule 46 (ElseStmt)

    ElseStmt  go to state 111


State 109

    8 Exprs: VAR ID IDPrime ':' Type ';' Exprs .

    $default  reduce using rule 8 (Exprs)


State 110

   45 ElseStmt: ELSE . '{' Exprs '}'

    '{'  shift, and go to state 112


State 111

   43 Ifelse: IF '(' BoolStmt ')' '{' Exprs '}' ElseStmt .

    $default  reduce using rule 43 (Ifelse)


State 112

   45 ElseStmt: ELSE '{' . Exprs '}'

    IF   shift, and go to state 43
    VAR  shift, and go to state 44
    ID   shift, and go to state 45

    $default  reduce using rule 11 (Exprs)

    Exprs   go to state 113
    LHS     go to state 47
    Ifelse  go to state 48


State 113

   45 ElseStmt: ELSE '{' Exprs . '}'

    '}'  shift, and go to state 114


State 114

   45 ElseStmt: ELSE '{' Exprs '}' .

    $default  reduce using rule 45 (ElseStmt)
